RESOLVED FIXED111259
WebKit2 is missing the setShowsURLsInToolTips preference
https://bugs.webkit.org/show_bug.cgi?id=111259
Summary WebKit2 is missing the setShowsURLsInToolTips preference
Sam Weinig
Reported 2013-03-02 18:48:01 PST
WebKit2 is missing the setShowsURLsInToolTips preference
Attachments
Patch (4.66 KB, patch)
2013-03-02 18:49 PST, Sam Weinig
mjs: review+
Sam Weinig
Comment 1 2013-03-02 18:49:34 PST
Maciej Stachowiak
Comment 2 2013-03-02 18:51:28 PST
Comment on attachment 191123 [details] Patch r=me
Sam Weinig
Comment 3 2013-03-02 18:55:38 PST
Note You need to log in before you can comment on or make changes to this bug.