WebKit2 is missing the setShowsURLsInToolTips preference https://bugs.webkit.org/show_bug.cgi?id=111259 <rdar://problem/12991891>

Reviewed by Maciej Stachowiak.

* Shared/WebPreferencesStore.h:
* UIProcess/API/C/WKPreferences.cpp:
(WKPreferencesSetShowsURLsInToolTipsEnabled):
(WKPreferencesGetShowsURLsInToolTipsEnabled):
* UIProcess/API/C/WKPreferencesPrivate.h:
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updatePreferences):
Pipe it through.

Canonical link: https://commits.webkit.org/129605@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144550 268f45cc-cd09-0410-ab3c-d52691b4dbfc